--- a/.github/workflows/enforce-branch-name.yml
+++ b/.github/workflows/enforce-branch-name.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Enforce Branch Name
         uses: finleyfamily/action-enforce-branch-name@v1.0.1
         with:
-          allowed_prefixes: features,assets,main,develop
+          allowed_prefixes: feature,asset,main,develop
           exclude: main,develop
-          regex: '^(features|assets)\/[a-zA-Z0-9\-_]+$'
+          regex: '^(feature|asset)\/[a-zA-Z0-9\-_]+$'
