fix: webgl ci 조건 변경

--- a/.github/workflows/webGL-Ci.yml
+++ b/.github/workflows/webGL-Ci.yml
@@ -1,8 +1,10 @@
 name: Build and Deploy WebGL
 
 on:
-  push:
+  pull_request:
     branches: [develop]
+  push:
+    branches: [main, develop]
 
 jobs:
   build:
