--- a/.github/workflows/webGL-Ci.yml
+++ b/.github/workflows/webGL-Ci.yml
@@ -39,6 +39,7 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          ALLOW_DIRTY_BUILD: true
 
       - name: Fix WebGL path and set permissions
         run: |
