--- a/.github/workflows/pr-title-checker.yml
+++ b/.github/workflows/pr-title-checker.yml
@@ -10,21 +10,6 @@ jobs:
     steps:
       - uses: naveenk1223/action-pr-title@master
         with:
-          allowed_prefixes: |
-            Feature
-            Bug
-            Assets
-            UI
-            Documentation
-            Refactor
-            Test
-            [Feature]
-            [Bug]
-            [Assets]
-            [UI]
-            [Documentation]
-            [Refactor]
-            [Test]
+          allowed_prefixes: 'Feature,Bug,Assets,Documentation,Refactor,[Feature],[Bug],[Assets],[Documentation],[Refactor]'
           prefix_case_sensitive: false
           min_length: 10
-        
