fix: ci eol, merge, branch 설정

--- a/.github/workflows/enforce-branch-name.yml
+++ b/.github/workflows/enforce-branch-name.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           allowed_prefixes: feature,asset,hotfix,test,refactor,main,develop
           exclude: main,develop
-          regex: '^(feature|asset|hotfix|test|refactor)\/[a-zA-Z0-9\-_]+$'
+          regex: '^(feature|asset|hotfix|test|refactor)\/[a-zA-Z0-9\-_\/]+$'
