--- a/.editorconfig
+++ b/.editorconfig
@@ -12,8 +12,8 @@ indent_style = space
 tab_width = 4
 
 # New line preferences
-end_of_line = unset
-insert_final_newline = unset
+# end_of_line = unset
+# insert_final_newline = unset
 
 #### .NET Coding Conventions ####
 
