fix: test ci 조건 수정

--- a/.github/workflows/playmode-test.yml
+++ b/.github/workflows/playmode-test.yml
@@ -1,9 +1,8 @@
 name: Unity PlayMode Tests
 
 on:
-  push:
-    branches: [develop]
-  pull_request:
+    pull_request:
+      types: [opened, edited, synchronize, reopened]
 
 jobs:
   playmode-tests:
